--- a/index.html
+++ b/index.html
@@ -3,23 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página inicial</title>
+  <title>Lista de Tarefas</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Boas vindas!</h1>
-    <p>Vamos personalizar sua saudação usando JavaScript!</p>
-    <div class="saudacao" id="mensagemSaudacao">Olá, visitante!</div>
-    <button onClick="mudarNome()">Personalizar saudação</button>
+    <h1>Lista de Tarefas</h1>
+    <p>Adicione suas tarefas!</p>
+    <input type="text" placeholder="Digite sua tarefa" id="inputTarefa">
+    <button onclick="adicionarTarefa()">Adicionar Tarefa</button>
+    <p id="mensagem"></p>
+    <ul id="listaTarefas"></ul>
   </div>
 
-  <script>
-    function mudarNome() {
-      let nome = "Eddie";
-      document.getElementById("mensagemSaudacao").textContent = "Ola " + nome;
-    }
-  </script>
-
+  <script src="script.js"></script>
 </body>
 </html>
